--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
     </div>
     <div>
-        <p class="date" style="color: rgb(68, 119, 69);;"> footer</p>
+        <p class="date" style="color: rgb(68, 119, 69);;">---</p>
     </div>
 </body>
 
